tests/fixtures/invalid/pow_bytes_int_bool.py
# Cannot call pow() with Bytes, Int, Bool
x = pow(b"hello", 1, True)
